--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.4",
+    "@types/react-select": "^3.0.14",
     "date-fns": "^2.14.0",
     "framer-motion": "^1.10.3",
     "polished": "^3.6.4",
@@ -18,6 +19,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-select": "^3.1.0",
     "styled-components": "^5.1.0",
     "typescript": "~3.7.2"
   },
